# LVC-CC

./: .gitignore  00-raw2png.py  10-preprocess.py  20-pre2yuv.py  30-codec.py  31-codec_mp.py  31-codec_ref.py  32-codec_popen.py  40-dec2png.py  41-dec2png_ref.py  50-postprocess.py  60-render.py  61-render_popen.py  61-render_ref.py  62-baseline_render.py  62-render_base.py  70-computation.py  QP.toml  README.md  base.00.raw2png.py  base.10.render.py  cc-00-convert-anchor.py  cc-00-render-anchor.py  cc-00-render.py  cc-00-run-anchor.py  cc-00-run-base.py  cc-01-convert-proc.py  cc-01-render-mca.py  cc-01-run-anchor-codec.py  cc-01-run-anchor-encode.py  cc-01-run-proc.py  cc-02-run-anchor-mv.py  cc-02-run-multicrop.py  cc-03-run-anchor-posetrace.py  cc-03-run-proc-codec.py  cc-04-run-proc-codec-mv.py  cc-04-run-proc-codec.py  cc-04-run-proc-encode.py  cc-05-run-proc-postproc.py  cc-06-run-proc-mv.py  (+89 more)
config/: default.toml  vtmExtra.cfg
config/Boxer-IrishMan-Gladiator/: calib.xml  mca.cfg  param.cfg  rlc.cfg  tlct.cfg
config/Boxer-IrishMan-Gladiator2/: calib.cfg  checksum.md5  checksum.sha1  codec.cfg  convert.sh
config/Boys/: calib.xml  mca.cfg  param.cfg  rlc.cfg  tlct.cfg  tlct.xml
config/Boys2/: calib.cfg  checksum.md5  checksum.sha1  param.cfg
config/Cars/: checksum.sha1  mca.cfg  rlc.cfg  tlct.cfg
config/ChessPieces/: checksum.sha1  mca.cfg  rlc.cfg  rlc.xml  tlct.cfg  vtm.cfg
config/ChessPieces-MovingCamera/: calib.xml  mca.cfg  param.cfg  rlc.cfg  rlc.xml  tlct.cfg  vtm.cfg
config/ComplexObjectMove/: mca.cfg  rlc.cfg  rlc.xml  tlct.cfg
config/Experimenting/: checksum.sha1  codec.cfg  mca.cfg  param.cfg  rlc.cfg  tlct.cfg  tlct.xml  vtm.cfg
config/Fujita2/: checksum.md5  checksum.sha1  codec.cfg  convert.sh
config/HandTools/: calib.cfg  calib.xml  checksum.md5  checksum.sha1  convert.sh  mca.cfg  param.cfg
config/Matryoshka/: calib.cfg  checksum.md5  checksum.sha1  convert.sh  mca.cfg  param.cfg  rlc.cfg  tlct.cfg  tlct.xml
config/MiniGarden/: calib.xml  mca.cfg  param.cfg
config/MiniGarden2/: calib.cfg  checksum.md5  checksum.sha1  convert.sh  param.cfg
config/Motherboard/: RLC.cfg  mca.cfg  param.cfg  tlct.cfg  tlct.xml
config/Motherboard2/: calib.cfg  checksum.md5  checksum.sha1  convert.sh  mca.cfg  param.cfg
config/NagoyaDataLeading/: mca.cfg  rlc.cfg  tlct.cfg  vtm.cfg
config/NagoyaFujita/: mca.cfg  param.cfg  rlc.cfg  tlct.cfg  vtm.cfg
config/NagoyaOrigami/: mca.cfg  param.cfg  rlc.cfg  tlct.cfg  vtm.cfg
config/Origami/: calib.cfg  checksum.md5  checksum.sha1  convert.sh  param.cfg
config/TempleBoatGiantR32/: RLC.cfg  TLCT.cfg  calib.cfg  checksum.md5  checksum.sha1  codec.cfg  convert.sh  (+2 more)
examples/: demo-baseline.py  demo-with-codec.py
lvccc/: __init__.py  executor.py  logging.py
mcahelper/: executer.py  executor.py  logging.py  utils.py
scripts/: cc-00-convert-anchor.py  cc-01-convert-mca.py  cc-01-render-mca.py  cc-10-compute.py  cc-21-export-csv-mca.py  cc-30-figure-anchor.py  cc-31-figure-mca.py  checksum.py  demo-baseline.py  demo-wMCA.py  demo-woMCA.py  make_encode_task.py  proc-copy.py  proc-timeit.py  rename.py  sample-rlc50.py  sample-tlct.py  sample.py
tests/: test_atomic.py  test_tasks.py
vvchelper/: logging.py  utils.py
(+221 files in other folders)
