[project]
name = "lvccc"
version = "0.13.0a4"
description = "A crosscheck framework designed for LVC"
authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
dependencies = ["yuvio", "pillow", "numpy"]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
export = ["matplotlib", "scipy"]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
dev-dependencies = ["pytest"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "ASYNC",
  "B",
  "A",
  "C4",
  "FA",
  "ICN",
  "LOG",
  "PIE",
  "PT",
  "Q",
  "RSE",
  "SLOT",
  "TC",
  "PTH",
  "NPY",
  "PERF",
  "FURB",
]
ignore = ["A005", "E402", "E501", "E266"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
