[project]
name = "lvccc"
version = "0.13.1a3"
description = "A crosscheck framework designed for LVC"
authors = [{ name = "lumina37", email = "tz23@mails.tsinghua.edu.cn" }]
dependencies = ["yuvio", "pillow", "numpy"]
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
export = ["matplotlib", "scipy"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "ASYNC",
  "B",
  "A",
  "C4",
  "FA",
  "ICN",
  "LOG",
  "PIE",
  "PT",
  "Q",
  "RSE",
  "SLOT",
  "TC",
  "PTH",
  "NPY",
  "PERF",
  "FURB",
]
ignore = ["A005", "E402", "E501", "E266"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
